/*
Copyright Â© 2021-2022 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.instance.driver.vanilla;

import "pkg/services/proto/services.proto";
import "pkg/instances/proto/instances.proto";
import "pkg/services_providers/proto/services_providers.proto";

message TestServiceProviderConfigRequest {
    nocloud.services_providers.ServicesProvider services_provider = 1;
    bool syntax_only = 2;
}

message GetTypeRequest {}
message GetTypeResponse {
    string type = 1;
}

message UpRequest {
    nocloud.instances.InstancesGroup group = 1;
    nocloud.services_providers.ServicesProvider services_provider = 2;
}

message UpResponse {
    nocloud.instances.InstancesGroup group = 1;
}

message DownRequest {
    nocloud.instances.InstancesGroup group = 1;
    nocloud.services_providers.ServicesProvider services_provider = 2;
}
message DownResponse {
    nocloud.instances.InstancesGroup group = 1;
}

message PerformActionRequest {
    nocloud.services.PerformActionRequest request = 1;
    nocloud.services_providers.ServicesProvider services_provider = 2;
}

service DriverService {
    rpc TestServiceProviderConfig(nocloud.instance.driver.vanilla.TestServiceProviderConfigRequest) returns (nocloud.services_providers.TestResponse);
    rpc TestInstancesGroupConfig(nocloud.instances.TestInstancesGroupConfigRequest) returns (nocloud.instances.TestInstancesGroupConfigResponse);
    rpc GetType(nocloud.instance.driver.vanilla.GetTypeRequest) returns (nocloud.instance.driver.vanilla.GetTypeResponse);

    rpc Up(nocloud.instance.driver.vanilla.UpRequest) returns (nocloud.instance.driver.vanilla.UpResponse);
    rpc Down(nocloud.instance.driver.vanilla.DownRequest) returns (nocloud.instance.driver.vanilla.DownResponse);

    rpc Invoke(PerformActionRequest) returns (nocloud.services.PerformActionResponse);
}